[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/ui_elements/edit_word_pop_up/edit_word_pop_up.gd" type="Script" id=1]
[ext_resource path="res://themes/main.tres" type="Theme" id=2]

[node name="EditWordPopUp" type="Panel"]
margin_right = 460.0
margin_bottom = 157.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 27.0
margin_right = 460.0
margin_bottom = 123.0

[node name="WordEditLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 460.0
margin_bottom = 41.0
text = "Edit Word"
align = 1

[node name="WordLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 45.0
margin_right = 460.0
margin_bottom = 96.0
placeholder_text = "Word"

[node name="TranslationLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 100.0
margin_right = 460.0
margin_bottom = 151.0
placeholder_text = "Translation"

[node name="DescriptionLineEdit" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 155.0
margin_right = 460.0
margin_bottom = 355.0
rect_min_size = Vector2( 0, 200 )
size_flags_vertical = 3
text = "Description"
smooth_scrolling = true

[node name="SaveButton" type="Button" parent="VBoxContainer"]
margin_top = 359.0
margin_right = 460.0
margin_bottom = 406.0
text = "Save"

[node name="WordTranslationTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="text_changed" from="VBoxContainer/WordLineEdit" to="." method="_on_WordLineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="timeout" from="WordTranslationTimer" to="." method="_on_WordTranslationTimer_timeout"]
